--- a/部署文件/HotFixDemo/app/src/main/res/layout/activity_main_sample.xml
+++ b/部署文件/HotFixDemo/app/src/main/res/layout/activity_main_sample.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="patch  channels  1.3.6" />
+        android:text="patch  patch  1.3.6" />
 
     <Button
     android:id="@+id/toastInfo"
